--- a/src/Web/Client/Pages/Assets.razor
+++ b/src/Web/Client/Pages/Assets.razor
@@ -88,7 +88,7 @@
     protected override async Task OnInitializedAsync()
     {
         loading = true;
-        Elements = await AssetsService.GetAssetSerials();
+        Elements = await AssetSerialService.GetAssetSerials();
         loading = false;
     }
 
@@ -97,15 +97,10 @@
         NavigationManager.NavigateTo($"/assets/{args.Item.Serial}");
     }
 
-    protected override async Task OnParametersSetAsync()
-    {
-        @* Elements = await AssetsService.GetAssetSerials(); *@
-    }
-
     private async Task OnAssetSerialHasChanged()
     {
         loading = true;
-        Elements = await AssetsService.GetAssetSerials();
+        Elements = await AssetSerialService.GetAssetSerials();
         loading = false;
     }
 }
