--- a/src/Web/Client/_Imports.razor
+++ b/src/Web/Client/_Imports.razor
@@ -1,27 +1,27 @@
-﻿@using System.Net.Http
-@using System.Net.Http.Json
-@using Microsoft.AspNetCore.Components.Forms
-@using Microsoft.AspNetCore.Components.Routing
-@using Microsoft.AspNetCore.Components.Web
-@using Microsoft.AspNetCore.Components.Sections
-@using Microsoft.AspNetCore.Components.Web.Virtualization
-@using Microsoft.AspNetCore.Components.WebAssembly.Http
-@using Microsoft.JSInterop
+﻿@using MudBlazor
 @using Web.Client
-@using MRA.AssetsManagement.Web.Shared
-@using MudBlazor
-@using MRA.AssetsManagement.Web.Client.Shared
-@using AssetsManagement.Web.Client.Services.AssetTypes
-@using AssetsManagement.Web.Client.Services.Tags
-@using AssetsManagement.Web.Client.Services.Employees
+@using System.Net.Http
+@using Microsoft.JSInterop
+@using System.Net.Http.Json
 @using System.Text.RegularExpressions
-@using System.ComponentModel.DataAnnotations
-@using MRA.AssetsManagement.Web.Client.Services.Icons
-@using MRA.AssetsManagement.Web.Client.Common.Extensions
-@using MRA.AssetsManagement.Web.Shared.AssetTypes
-@using MRA.AssetsManagement.Web.Client.Services
-@using MRA.AssetsManagement.Web.Client.Services.AuthService
-@using Microsoft.AspNetCore.Components.Authorization
+@using MRA.AssetsManagement.Web.Shared
 @using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Forms
+@using System.ComponentModel.DataAnnotations
+@using MRA.AssetsManagement.Web.Client.Shared
+@using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Components.Sections
+@using MRA.AssetsManagement.Web.Client.Services
+@using AssetsManagement.Web.Client.Services.Tags
+@using MRA.AssetsManagement.Web.Shared.AssetTypes
+@using MRA.AssetsManagement.Web.Shared.AssetSerials
 @using Microsoft.AspNetCore.Components.Authorization
-
+@using AssetsManagement.Web.Client.Services.Employees
+@using MRA.AssetsManagement.Web.Client.Services.Icons
+@using AssetsManagement.Web.Client.Services.AssetTypes
+@using Microsoft.AspNetCore.Components.WebAssembly.Http
+@using MRA.AssetsManagement.Web.Client.Common.Extensions
+@using Microsoft.AspNetCore.Components.Web.Virtualization
+@using MRA.AssetsManagement.Web.Client.Services.HomeService
+@using MRA.AssetsManagement.Web.Client.Services.AuthService
