--- a/src/Web/Client/Pages/Assets.razor
+++ b/src/Web/Client/Pages/Assets.razor
@@ -83,7 +83,8 @@
 
 @code {
 
-    [Parameter] public string? Serial { get; set; }
+    [Parameter] 
+    public string? Serial { get; set; }
     private string searchString1 = "";
     private MudTable<GetAssetSerial> _table = null!;
     private bool loading = false;
