--- a/src/Web/Client/_Imports.razor
+++ b/src/Web/Client/_Imports.razor
@@ -23,3 +23,4 @@
 @using MRA.AssetsManagement.Web.Client.Services.AuthService
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Authorization
+@using Blazored.TextEditor
