--- a/src/Web/Client/Pages/HomePage.razor
+++ b/src/Web/Client/Pages/HomePage.razor
@@ -10,8 +10,8 @@
 {
     @foreach (var assetType in _getAssetType)
     {
-        <MudText Typo="Typo.h4" Color="Color.Primary">
-            <MudIcon Icon="@IconService.GetIcon(assetType.Icon)" />
+        <MudText Typo="Typo.h5">
+            <MudIcon Size="Size.Small" Icon="@IconService.GetIcon(assetType.Icon)" />
             <strong>@assetType.Name</strong>
         </MudText>
 
@@ -20,8 +20,8 @@
             <MudCard Class="mt-3 pa-4" Style="max-width: 550px">
                 <MudCardContent>
                       <MudStack Row=true Class="d-flex justify-space-between mb-5">
-                        <MudText Typo="Typo.body1">@asset.Name </MudText>
-                        <MudText Typo="Typo.body1">@asset.Serial </MudText>
+                        <MudText Typo="Typo.body1" Class="mud-primary-text" Style="font-weight: bold">@asset.Name </MudText>
+                        <MudText Typo="Typo.body1" Style="font-weight: bold">@asset.Serial </MudText>
                     </MudStack>
                 </MudCardContent>
             </MudCard>
