--- a/src/Web/Client/Pages/AssetPurchase.razor
+++ b/src/Web/Client/Pages/AssetPurchase.razor
@@ -9,7 +9,7 @@
 @inject ISnackbar SnackBar
 
 <MudStack Row="true" Class="d-flex justify-space-between mb-3 pa-1">
-    <MudText Typo="Typo.h4">Purchase</MudText>
+    <MudText Typo="Typo.h4">New Assets</MudText>
     <MudButton Variant="Variant.Filled" @onclick=Create ButtonType=ButtonType.Submit StartIcon="@Icons.Material.Filled.CreateNewFolder" Color="Color.Tertiary" Size="Size.Medium">Enter</MudButton>
 </MudStack>
 <MudStack Row=true Class="d-flex justify-space-between mb-3 gap-0">    
