--- a/src/Web/Client/Pages/AssetSerialDetail.razor
+++ b/src/Web/Client/Pages/AssetSerialDetail.razor
@@ -82,10 +82,11 @@
         </MudStack>
     </MudNavMenu>
 
-    <NoteDialog OnSaveButtonClicked="OnSaveButtonClicked" AssetSerial="@assetSerial" />
+    <NoteDialog />
 </MudDrawer>
 
 @code {
+    
     [Parameter] public string Serial { get; set; } = null!;
     private string prevSerial = string.Empty;
     [Parameter] public EventCallback OnSaveButtonClicked { get; set; }
@@ -95,26 +96,19 @@
     private bool isLoading = true;
     private bool isSerialHasChanged = false;
     private bool showNoteTextEditor = false;
-    BlazoredTextEditor QuillHtml = null!;
 
-    void Cancel()
-    {
-        showNoteTextEditor = false;
-    }
+    void Cancel() => showNoteTextEditor = false;
 
-    async Task Submit()
-    {
-        
-    }
+    void ShowDialog() => DialogService.Show<NoteDialog>();
 
     protected override async Task OnInitializedAsync()
     {
-        @* UserDisplays = (await EmployeesService.GetEmployees()).Select(x => new UserDisplay
-{
-UserName = x.UserName,
-FirstName = x.FullName.Split(" ")[0],
-LastName = x.FullName.Split(" ")[1]
-}).OrderBy(x => x.FirstName); *@
+        UserDisplays = (await EmployeesService.GetEmployees()).Select(x => new UserDisplay
+        {
+            UserName = x.UserName,
+            FirstName = x.FullName.Split(" ")[0],
+            LastName = x.FullName.Split(" ")[1]
+        }).OrderBy(x => x.FirstName);
     }
 
     protected override async Task OnParametersSetAsync()
@@ -122,16 +116,6 @@ LastName = x.FullName.Split(" ")[1]
         if (Serial is not null && prevSerial != Serial)
         {
             assetSerial = await AssetSerialService.GetBySerial(Serial);
-            @* assetSerial = new GetAssetSerial()
-                {
-                    Id = "123hjkjhasgh29",
-                    Employee = new UserDisplay() { FirstName = "Sue", LastName = "Storm", UserName = "sue" },
-                    Status = Web.Shared.Enums.AssetStatus.Taken,
-                    Name = "Asus k55a",
-                    Serial = "LPT-000004",
-                    LastModified = DateTime.Now,
-                    From = DateTime.Now.AddDays(-40)
-                }; *@
             isLoading = false;
             prevSerial = Serial;
             showHistory = false;
@@ -166,6 +150,7 @@ LastName = x.FullName.Split(" ")[1]
 
         DialogParameters parameters = new DialogParameters();
         parameters.Add("AssetSerial", assetSerial);
+        parameters.Add("OnSaveButtonClicked", OnSaveButtonClicked);
         DialogService.Show<NoteDialog>("", parameters);
     }
 
